# conda-ship

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  action.yml  artifact.lock.hash  build.rs  cx.lock.hash  pixi.toml  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  2_epic.yml  config.yml
.github/workflows/: build.yml  canary.yml  ci.yml  docs.yml  release.yml  windows-arm64-canary.yml  zizmor.yml
crates/cx-build/: Cargo.toml
crates/pronto/: Cargo.toml
crates/pronto-build/: Cargo.toml
demos/: _cs_setup.tape  _settings.tape  dry-run.tape  inspect.tape  quickstart.tape  runtime-cli.tape  verify.tape
docs/: conf.py  configuration.md  index.md  roadmap.md  robots.txt
docs/explanation/: artifact-layout-tradeoffs.md  concepts.md  conda-fleet.md  fleet.md  install-locations-and-ownership.md  manifests-and-conda-plugin.md  overview.md  project-boundaries.md  runtime-template.md  source-locks-and-runtime-locks.md  trust-and-provenance.md
docs/how-to/: build-in-github-actions.md  build-locally.md  build-offline-artifacts.md  choose-artifact-layout.md  customize-runtime.md  package-a-runtime.md  troubleshoot-builds.md  (+1 more)
src/: bootstrap_lock.rs  bootstrap_state.rs  cli.rs  commands.rs  config.rs  constructor_metadata.rs  exclude.rs  exec.rs  executable_update.rs  fleet.rs  hash.rs  http.rs  install.rs  launcher_receipt.rs  lib.rs  main.rs  policy.rs  runtime_data.rs  runtime_update.rs
tests/: builder_diagnostics.rs  cli_integration.rs  conda_prompt_stdout_pipe_regression.rs  exclude_integration.rs  nan_cli.rs
(+40 files in other folders)
