[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "conda-ship"
version = "0.2.0"
description = "Conda plugin entry point for the conda-ship runtime builder."
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Jannis Leidel", email = "jannis@leidel.info" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
]
dependencies = [
  "conda >=25.1",
  "pyproject-hooks >=1.2",
  "tomli >=1.1; python_version < '3.11'",
]

[project.urls]
repository = "https://github.com/jezdez/conda-ship"

[project.entry-points.conda]
conda-ship = "conda_ship.plugin"

[tool.maturin]
bindings = "bin"
exclude = ["**/__pycache__", "**/*.pyc"]
features = ["runtime-template"]
locked = true
module-name = "conda_ship"
python-source = "python"
strip = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "FA",
  "I",
  "ISC",
  "RUF100",
  "T10",
  "TCH",
  "UP",
  "W",
]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true
